# Technopark_C_C-plus-plus

./: .gitignore  .travis.sh  .travis.yml  README.md
.circleci/: config.yml
generator/: main.py
project/: CMakeLists.txt
project/include/: main.h
project/src/: free_url.c  gtest.cpp  main.c  parser_md.c  parser_prtcl.c  parser_str_od.c  parser_url.c  parser_url.cpp  print.c  stopwatch.c
project/src_consistent/: consistent.c
project/src_parallel/: parallel.c
project/tests/: find_gtests.cpp  gtest.cpp  timer_gtest.cpp
